# fidovault

./: README.md  fidovault.py  pyproject.toml
.github/workflows/: python-package.yml
